# animanage-v2

./: .gitignore  pyproject.toml
animanage_v2/: settings.py
animesonline/: constants.py  models.py  schemas.py
animesonline/crawler/: extractors.py  loaders.py  transformers.py
parser/: interface.py
parser/concretes/: soup.py
requester/: dispatcher.py  interface.py
requester/concretes/: httpx.py
tests/: sample.html
tests/animesonline/crawler/: test_extractors.py  test_transformers.py
tests/parsers/: test_soup.py
tests/requesters/: test_dispatcher.py  test_httpx.py
