[tool.poetry]
name = "animanage-v2"
version = "0.1.0"
description = ""
authors = ["LeandroDeJesus-S <jstleandro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.112.0"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.32"


[tool.poetry.group.test.dependencies]
coverage = "^7.6.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[tool.taskipy.tasks]
test = "coverage run -m unittest && coverage report -m && coverage html"

[tool.coverage.run]
omit = [
    "test*",
    "*__init__*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
